--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --10px-border-radius: 10px;
+    --grey-box-shadow: 5px 5px 5px #bec3cd;
+}
+
 * {
     box-sizing: border-box;
     font-size: 1.8vw;
@@ -96,7 +101,7 @@ nav {
     color: #fff;
     padding-left: 1vw;
     display: grid;
-    grid-template-rows: repeat(2, 1fr) 18fr;
+    grid-template-rows: repeat(3, min-content);
     gap: 5vh;
 }
 
@@ -115,5 +120,112 @@ nav h1 {
 }
 
 #preferences {
-    grid-template-rows: repeat(2, 1fr) 18fr;
+    grid-template-rows: repeat(3, min-content);
+}
+
+
+/* main */
+
+main {
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    grid-template-rows: repeat(2, 1fr);
+    padding-top: 3vh;
+    padding-left: 1.5vw;
+}
+
+#projects-container h3, #projects-container h4 {
+    font-size: 0.75rem;
+}
+
+#projects-display-container {
+    margin-top: 1vh;
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+    gap: 2vh;
+}
+
+.project-display {
+    height: 20vh;
+    width: 25vw;
+    background-color: #fff;
+    border-radius: var(--10px-border-radius);
+    box-shadow: 7px 0px inset #fbbf24;
+    padding-left: 1.5vw;
+    padding-top: 2vh;
+}
+
+.project-display-box-shadow {
+    box-shadow: 11px 11px 5px #bec3cd;;
+    height: 19.5vh;
+    width: 24.5vw;
+    border-radius: 12px;
+}
+
+.project-display p {
+    font-size: 0.7rem;
+    color: #7a7a7a;
+}
+
+#announcements-and-trending-container h3 {
+    font-size: 0.75rem;
+}
+
+#announcements-and-trending-container {
+    margin-right: 1vw;
+    height: 100%;
+    display: grid;
+    grid-template-rows: repeat(2, min-content) 1fr;
+}
+
+#announcements-container {
+    margin-top: 1vh;
+    background-color: #fff;
+    border-radius: var(--10px-border-radius);
+    display: grid;
+    align-self: start;
+    box-shadow: var(--grey-box-shadow);
+}
+
+#announcements-container h4 {
+    font-size: 0.65rem;
+}
+
+#announcements-container p {
+    font-size: 0.6rem;
+    color: #7a7a7a;
+}
+
+.announcements {
+    margin: 1vh 0.75vw 0.5vh 1vw;
+}
+
+.border-bottom {
+    border-bottom: 1px solid #d4d4d4;
+    padding-bottom: 1vh;
+    height: 100%;
+}
+
+#trending-container {
+    align-self: end;
+}
+
+#trending-projects-container {
+    background-color: #fff;
+    border-radius: var(--10px-border-radius);
+    margin-top: 1vh;
+    display: grid;
+    box-shadow: var(--grey-box-shadow);
+}
+
+.trending-projects {
+    margin: 1vh 0.75vw 0.5vh 1vw;
+}
+
+.trending-projects h5 {
+    font-size: 0.6rem;
+}
+
+.trending-projects p {
+    font-size: 0.55rem;
 }
