--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ header {
     grid-area: 1 / 2 / 1 / 4;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
+    padding-top: 1vh;
 }
 
 #header-top-half, #header-bottom-half {
@@ -55,6 +56,18 @@ header {
     font-size: 0.75rem;
 }
 
+#noti-pfp-fullname {
+    display: grid;
+    grid-template-columns: repeat(2, min-content) 10vw;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5vw;
+}
+
+#noti-pfp-fullname img {
+    width: 3vw;
+}
+
 #search-bar {
     display: grid;
     grid-template-columns: 1fr 7fr;
@@ -69,6 +82,10 @@ header {
 #header-top-half h3 {
     font-size: 0.75rem;
     justify-self: center;
+}
+
+#name-welcome-and-pfp {
+    padding-left: 12%;
     align-self: center;
     display: grid;
     grid-template-columns: min-content 1fr;
@@ -76,9 +93,8 @@ header {
     gap: 1vw;
 }
 
-#name-welcome {
-    padding-left: 12%;
-    align-self: center;
+#name-welcome-and-pfp img {
+    width: 5vw;
 }
 
 #name-welcome h5 {
@@ -171,18 +187,26 @@ main {
 }
 
 .project-display {
-    height: 20vh;
+    height: 22vh;
     width: 25vw;
     background-color: #fff;
     border-radius: var(--10px-border-radius);
     box-shadow: 7px 0px inset #fbbf24;
-    padding-left: 1.5vw;
-    padding-top: 2vh;
+    padding: 2vh 1.5vw 1vh 1.5vw;
+}
+
+.project-display-images {
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
+    justify-content: end;
+    gap: 1vw;
+    position: relative;
+    bottom: 0.35vh;
 }
 
 .project-display-box-shadow {
     box-shadow: var(--grey-box-shadow);
-    height: 20vh;
+    height: 22vh;
     width: 25vw;
     border-radius: 12px;
 }
@@ -190,6 +214,8 @@ main {
 .project-display p {
     font-size: 0.7rem;
     color: #7a7a7a;
+    height: 12vh;
+    overflow: scroll;
 }
 
 #announcements-and-trending-container h3 {
@@ -233,6 +259,7 @@ main {
 
 #trending-container {
     align-self: end;
+    margin-top: 2vh;
 }
 
 #trending-projects-container {
@@ -245,6 +272,14 @@ main {
 
 .trending-projects {
     margin: 1vh 0.75vw 0.5vh 1vw;
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    gap: 1vw;
+    align-items: center;
+}
+
+.trending-projects img {
+    width: 3vw;
 }
 
 .trending-projects h5 {
@@ -255,17 +290,21 @@ main {
     font-size: 0.55rem;
 }
 
-/* images */
+/* svg images */
 
 nav #dashboard-title svg {
-    height: 4vh;
+    width: 3vw;
 }
 
 nav svg {
     filter: invert(100%) sepia(0%) saturate(7427%) hue-rotate(23deg) brightness(118%) contrast(118%);
-    height: 3vh;
+    width: 2.5vw;
 }
 
 header svg {
-    height: 3vh;
+    width: 2.5vw;
+}
+
+.project-display svg {
+    width: 2vw;
 }
